# mobile_maniupulator

./: .gitignore  README.md
arm_hardware_interface/: CMakeLists.txt  package.xml
arm_hardware_interface/config/: arm_controller.yaml  controllers.yaml  joint_state_controller.yaml  joints_name.yaml
arm_hardware_interface/launch/: arm_hardware.launch
arm_hardware_interface/scripts/: test_hw.py
arm_hardware_interface/src/: arm_hardware_interface_node.cpp
arm_hardware_interface/urdf/: arm.urdf  no_gripper_arm_urdf.urdf
aruco_detector/: CMakeLists.txt  package.xml
aruco_detector/scripts/: Ros.py  voice_handler.py  vp.py
mybot_hardware_interface/: CMakeLists.txt
mybot_hardware_interface/config/: diff_drive_controller.yaml  joint_limits.yaml
mybot_hardware_interface/firmware/diff_drive_robot/: diff_drive_robot.ino
mybot_hardware_interface/include/mybot_hardware_interface/: mybot_hardware_interface.h
mybot_hardware_interface/launch/: diff3.launch  diff_drive_robot_gazebo.launch
mybot_hardware_interface/src/: mybot_hardware_interface.cpp  mybot_hardware_interface_node.cpp
mybot_hardware_interface/urdf/: diff_drive_robot.urdf
robotic_arm_moveit_config/: .setup_assistant  package.xml
robotic_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  robotic_arm.srdf  ros_controllers.yaml
robotic_arm_moveit_config/launch/: gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch
robotic_arm_urdf/: CMakeLists.txt  package.xml
robotic_arm_urdf/config/: joint_trajectory_controller.yaml
robotic_arm_urdf/rviz/: urdf.rviz
(+23 files in other folders)
